# gha_main

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: action_integration_tests.yml  ci.yaml  clear-cache.yml  composite_action_integration_tests.yml  container_action_integration_tests.yml  direct_action_integration_tests.yml  normal_action_integration_tests.yml  update_lock_files.yml
example-action/: Cargo.toml  action.yml
example-action/src/: main.rs
example-actions/composite/: Cargo.toml  action.yml  github_output
example-actions/composite/src/: main.rs
example-actions/container/: Cargo.toml  Dockerfile  action.yml
example-actions/container/src/: main.rs
example-actions/direct/: action.yml  github_output
example-actions/direct/src/: main.rs
example-actions/normal/: Cargo.toml  action.yml
gha-main-core/: Cargo.toml  README.md
gha-main-core/src/: lib.rs
gha-main-proc-macro/: Cargo.toml  README.md
gha-main-proc-macro/src/: lib.rs
gha_main-proc_macro/: Cargo.toml
gha_main_core/: Cargo.toml  README.md
gha_main_core/src/: lib.rs
gha_main_proc_macro/: Cargo.toml  README.md
src/: lib.rs
src/proc_macro/: Cargo.toml  mod.rs
tests/: compile_tests.rs  output_tests.rs
tests/compile_tests/: wrong_function_name.rs  wrong_function_name.stderr
