[package]
name = "gha_main"
version = "0.0.2"
description = "Convenience macros for writing GitHub Actions in Rust"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
repository = "https://github.com/avsaase/gha_main"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
anyhow = "1.0.71"
gha_main-proc_macro = { path = "src/proc_macro", version = "0.0.2" }
lazy_static = "1.4.0"
uuid = { version = "1.3.3", features = ["v4"] }

[dev-dependencies]
regex = "1.8.3"
temp-env = "0.3.4"
trybuild = "1.0.80"

[workspace]
members = ["src/proc_macro"]
exclude = [
    "example-actions/composite",
    "example-actions/container",
] # The example actions needs their own lock files
