[package]
name = "gha-main"
version = "0.0.2"
description = "Convenience macros for writing GitHub Actions in Rust"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
repository = "https://github.com/avsaase/gha_main"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
gha-main-proc-macro = { path = "gha-main-proc-macro" }
gha-main-core = { path = "gha-main-core" }
anyhow = "1.0.71"
lazy_static = "1.4.0"

[dev-dependencies]
regex = "1.8.3"
temp-env = "0.3.4"
trybuild = "1.0.80"
uuid = { version = "1.3.3", features = ["v4"] }

[workspace]
members = ["gha-main-proc-macro", "gha-main-core"]
exclude = [
    "example-actions/composite",
    "example-actions/container",
    "example-actions/direct",
] # The example actions needs their own lock files
