[package]
name = "gha_main_core"
version = "0.0.3"
description = "Convenience macros for writing GitHub Actions in Rust"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
repository = "https://github.com/avsaase/gha_main"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
syn = { version = "2.0.16", features = ["full"] }
quote = "1.0.9"
proc-macro2 = "1.0.24"
proc-macro-error = "1.0"
uuid = { version = "1.3.3", features = ["v4"] }
anyhow = "1.0.71"
