[package]
name = "gha_main_proc_macro"
version = "0.0.3"
description = "Convenience macros for writing GitHub Actions in Rust"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
repository = "https://github.com/avsaase/gha_main"
edition = "2021"
license = "Apache-2.0 OR MIT"

[lib]
proc-macro = true

[dependencies]
gha_main_core = { path = "../gha_main_core", version = "0.0.3" }
proc-macro2 = "1.0.58"
proc-macro-error = "1.0.4"
