[package]
name = "gha_main-proc_macro"
version = "0.0.1"
description = "Convenience macros for writing GitHub Actions in Rust"
authors = ["Alexander van Saase <avsaase@gmail.com>"]
repository = "https://github.com/avsaase/gha_main"
edition = "2021"
license = "Apache-2.0 OR MIT"

[dependencies]
quote = "1.0.27"
syn = { version = "2.0.16", features = ["full"] }
proc-macro2 = "1.0.58"
proc-macro-error = "1.0.4"

[lib]
proc-macro = true
path = "mod.rs"
